# Master

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  meow_master.conf.sample
src/: CMakeLists.txt  entry.c  entry.cpp  server.cpp  server.h
src/http/: const.h  httpConnection.cpp  httpConnection.h  httpCookie.h  httpData.cpp  httpData.h  httpRequest.cpp  httpRequest.h  httpRequestHandler.h  httpRequestRouter.cpp  httpRequestRouter.h  httpResponse.cpp  httpResponse.h  httpServer.cpp  httpServer.h  httpServerConfig.h  middleware.h  util.cpp  util.h
src/http/middleware/: CORS.cpp  auth.cpp  getArray.cpp  getObject.cpp  verifyJson.cpp
src/initialization/: initialization.c  initialization.h
src/initializations/: logger.h  server.h
src/logger/: logger.c  logger.h
src/services/: generate_keys.c  generate_keys.h  handler.cpp  handler.h  transform.c  transform.h
